--- a/css/custom.css
+++ b/css/custom.css
@@ -326,3 +326,52 @@
     width: 100%;
   }
 }
+
+
+/* Hero Section Png pattern  */
+.popup-container {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  background-color: transparent;
+  border-radius: 10px;
+  overflow: hidden;
+  left: 20%;
+}
+.popup-image {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  animation: popAnimation 2s ease-in-out infinite;
+  opacity: 0;
+}
+.popup-image-1 {
+  top: 10%;
+  left: 5%;
+  animation-delay: 0.5s;
+}
+.popup-image-2 {
+  top: 30%;
+  right: 5%;
+  animation-delay: 1s;
+}
+.popup-image-3 {
+  bottom: 30%;
+  left: 15%;
+  animation-delay: 1.5s;
+}
+.popup-image-4 {
+  bottom: 10%;
+  right: 10%;
+  animation-delay: 2s;
+}
+@keyframes popAnimation {
+  0%, 100% {
+    transform: scale(0);
+    opacity: 0;
+  }
+  50% {
+    transform: scale(1);
+    opacity: 1;
+  }
+}
