--- a/css/custom.css
+++ b/css/custom.css
@@ -1,4 +1,24 @@
+.table-cover{
 
+  background-image: url(/images/8178472.jpg);
+}
+.footer-cover {
+  position: relative;
+  background-image: url(/images/51984.jpg);
+  background-color: rgba(0, 0, 0, 1) !important;
+  z-index: 1; /* Ensure the footer content is above the overlay */
+}
+
+.footer-cover::before {
+  content: "";
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.7); /* Adjust the opacity to make it darker */
+  z-index: -1; /* Ensure the overlay is behind the footer content */
+}
 .overlay{
   background-color: rgba(0, 0, 0, 1) !important;
 }
